fix(*): fix labeled inputs on ios11 (#304)

--- a/src/input/input.css
+++ b/src/input/input.css
@@ -46,7 +46,7 @@
         font-size: var(--font-size-m);
         text-overflow: ellipsis;
         white-space: nowrap;
-        transform: scale(1) translate3d(0, 0, 0);
+        transform: scale(1) translateY(0);
         transform-origin: 0 100%;
         transition-duration: 200ms;
         transition-property: color, transform;
@@ -254,7 +254,7 @@
     &.input_focused,
     &.input_has-value {
         .input__top {
-            transform: scale(var(--top-scale-s)) translate3d(0, -22px, 0);
+            transform: scale(var(--top-scale-s)) translateY(-22px);
         }
     }
 
@@ -299,7 +299,7 @@
     &.input_focused,
     &.input_has-value {
         .input__top {
-            transform: scale(var(--top-scale-m)) translate3d(0, -30px, 0);
+            transform: scale(var(--top-scale-m)) translateY(-30px);
         }
     }
 
@@ -344,7 +344,7 @@
     &.input_focused,
     &.input_has-value {
         .input__top {
-            transform: scale(var(--top-scale-l)) translate3d(0, -40px, 0);
+            transform: scale(var(--top-scale-l)) translateY(-40px);
         }
     }
 
@@ -389,7 +389,7 @@
     &.input_focused,
     &.input_has-value {
         .input__top {
-            transform: scale(var(--top-scale-xl)) translate3d(0, -50px, 0);
+            transform: scale(var(--top-scale-xl)) translateY(-50px);
         }
     }
 
